...
      }
    },
    "API Base URL" : {

    },
...

    },
    "minimax-cn" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "保存" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "关闭" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "发送 Token" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "取消" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "字母" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "学习" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "学习偏好" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "学习笔记" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "完成" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "应用设置" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "按语言设置音色" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "接收 Token" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "未单独设置、未指定或暂不支持的语言使用默认音色。" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "模型名称" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "测试" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "测试记录" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "用量总览" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "练习这个字母 →" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "翻译" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "设置" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "试听使用当前填写的配置，点击右上角保存后生效。播放的是 AI 生成语音。" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "语法" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "语音合成" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "调试服务器地址" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "返回 Lingrove" : {
      "extractionState" : "stale",
      "localizations" : {
...
      }
    },
    "通用模型" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "通用模型使用统计" : {
      "localizations" : {
        "en" : {
...
      }
    },
    "重新加载子应用" : {
      "extractionState" : "stale",
      "localizations" : {
...
